--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="chuj">
       <div class="nav">
         <div class="logo">
-          <a class="xd" href="/index.html">dawid krawczyk</a>
+          <a class="xd" href="index.html">dawid krawczyk</a>
         </div>
         <div>
           <input type="checkbox" id="menu-bar" />
