--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="chuj">
       <div class="nav">
         <div class="logo">
-          <a class="xd" href="/portfolio/index.html">dawid krawczyk</a>
+          <a class="xd" href="./index.html">dawid krawczyk</a>
         </div>
         <div>
           <input type="checkbox" id="menu-bar" />
@@ -34,7 +34,7 @@
       </div>
       <div class="txt">
         <div class="img">
-          <img src="./img/Nowy projekt (7).png" alt="twoj stary pijany" />
+          <img src="./img/img.png" alt="twoj stary pijany" />
         </div>
         <div class="opis">
           <h2>Cześć jestem</h2>
