--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
     <div class="chuj">
       <div class="nav">
         <div class="logo">
-          <a class="xd" href="./index.html">dawid krawczyk</a>
+          <a class="xd" id="hp" href="./index.html">dawid krawczyk</a>
+          <a href="./index.html" class="xd">
+            <i class="fa fa-home"></i>
+          </a>
         </div>
         <div>
           <input type="checkbox" id="menu-bar" />
-          <label for="menu-bar" class="xd">Menu</label>
+          <label for="menu-bar" class="xd">
+            <i class="fa fa-bars"></i>
+          </label>
         </div>
         <nav class="navbar">
           <a class="xd" href="./podstrony/omnie.html">o mnie</a>
