--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="nav">
         <div class="logo">
           <a class="xd" id="hp" href="./index.html">dawid krawczyk</a>
-          <a href="./index.html" class="xd">
+          <a href="./index.html" class="xd" id="menuxd">
             <i class="fa fa-home"></i>
           </a>
         </div>
