--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <i class="fa fa-home"></i>
           </a>
         </div>
-        <div>
+        <div class="XD">
           <input type="checkbox" id="menu-bar" />
-          <label for="menu-bar" class="xd">
+          <label for="menu-bar" id="expand-btn" class="xd">
             <i class="fa fa-bars"></i>
           </label>
+          <nav class="navbar">
+            <a class="xd" href="./podstrony/omnie.html">o mnie</a>
+            <a href="./podstrony/projekty.html" class="xd">projekty</a>
+            <a class="xd" href="./podstrony/kontakt.html">kontakt</a>
+          </nav>
         </div>
-        <nav class="navbar">
-          <a class="xd" href="./podstrony/omnie.html">o mnie</a>
-          <a href="./podstrony/projekty.html" class="xd">projekty</a>
-          <a class="xd" href="./podstrony/kontakt.html">kontakt</a>
-        </nav>
       </div>
       <div class="txt">
         <div class="img">
