--- a/podstrony/projekty.html
+++ b/podstrony/projekty.html
@@ -3,22 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../style.css" />
-    <title>projekty</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="chuj">
       <div class="nav">
         <div class="logo">
-          <a class="xd" href="../index.html">dawid krawczyk</a>
+          <a class="xd" id="hp" href="../index.html">dawid krawczyk</a>
+          <a href="../index.html" class="xd" id="menuxd">
+            <i class="fa fa-home"></i>
+          </a>
         </div>
         <div>
           <input type="checkbox" id="menu-bar" />
-          <label for="menu-bar" class="xd">Menu</label>
+          <label for="menu-bar" class="xd">
+            <i class="fa fa-bars"></i>
+          </label>
         </div>
         <nav class="navbar">
           <a class="xd" href="omnie.html">o mnie</a>
-          <a href="projekty.html" class="xd">projekty</a>
+          <a href=".html" class="xd">projekty</a>
           <a class="xd" href="kontakt.html">kontakt</a>
         </nav>
       </div>
